Fix carousel not showing

--- a/scss/gallery_style.scss
+++ b/scss/gallery_style.scss
@@ -179,6 +179,7 @@ ul {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	z-index: 1;
 	
 	&__rotate {
 	  width: 100%;
